# polymarketBot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  development_plan.yaml  docker-compose.yml  main.py  patch_clob.py  pyproject.toml  requirements-dev.txt  requirements.txt  strategy_config.yaml  test_clusters.py
.cursor/rules/: antigravity-awesome-skills.mdc
.github/agents/: auditor-seguridad-resiliencia.agent.md  ingeniero-clean-architecture.agent.md  ingeniero-pruebas-destructivas.agent.md  validador-cuantitativo.agent.md
.github/workflows/: ci.yml
analytics/: arbitrage.py  risk.py  whale.py
api/: kalshi.py  polymarket.py
database/: db.py
docs/: paper_run_weekly_template.md  project_evaluation_plan.md  strategy_spec.md
scripts/: paper_run_status.py  promotion_gate_report.py  setup_ollama.sh  terminal_dashboard.py
src/: dashboard.py  main.py
src/ai/: market_context.py  prompts.py  rag_engine.py  web_search.py
src/core/: brain.py  (+6 more)
tests/: __init__.py  conftest.py  test_binary_sim.py  test_claude_vs_gemma.py  test_clob_resilience.py  test_integration_dual_loop.py  test_market_maker.py  test_mm_defensive_controls.py  test_mm_rejection_metrics.py  test_mm_rounds.py  test_mm_short_horizon_discovery.py  test_model_pricing.py  test_phase1_kelly.py  test_phase2_security.py  test_phase3_clob.py  test_phase4_llm.py  test_phase4_replay_reporting.py  test_phase5_db.py  test_phase5_promotion_gate.py  test_quant_engine_rules.py  test_regime_filter.py  test_side_selection.py  test_web_vs_blind.py  test_yaml_config_contract.py
ui/: app.py  charts.py
(+31 files in other folders)
